--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="home">
         <div class="hero">
             <h1>Welcome to My Webpage!</h1>
-            <p>Hi, I'm Shweni, a passionate student hoping to go into the STEM field!</p>
+            <p>Hi, I'm Shweni, a passionate student hoping to get into STEM field!</p>
             <a href="#projects" class="cta-button">View Projects</a>
         </div>
     </section>
