--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <section id="home">
         <div class="hero">
             <h1>Welcome to My Webpage!</h1>
-            <p>Hello, I'm Shweni, a rising senior at Fulshear High School. I'm passionate about computer science, literature and science. 
-I like diving into projects that challenge me to think creatively and critically. Whether I'm coding apps, leading the debate team, or volunteering at a local temples/churches, I thrive on making a positive impact. Outside the classroom, you can find me playing violin, attending National Honors Society team meetings and organizing community events.
-As I head into my final year of high school, I'm excited to explore potential college majors like computer science/ engineering and continue growing as a leader and learner.</p>
+            <p>I'm a high school senior who is passionate and interested in the STEM field. I enjoy coding user-friendly applications! About me section provide a bit more of my profile</p>
             <a href="#projects" class="cta-button">View Projects</a>
         </div>
     </section>
@@ -32,7 +30,9 @@ As I head into my final year of high school, I'm excited to explore potential co
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm a high school senior who is passionate and interested in the STEM field. I enjoy coding user-friendly applications!</p>
+        <p>Hello, I'm Shweni, a rising senior at Fulshear High School. I'm passionate about computer science, literature and science. 
+I like diving into projects that challenge me to think creatively and critically. Whether I'm coding apps, leading the debate team, or volunteering at a local temples/churches, I thrive on making a positive impact. Outside the classroom, you can find me playing violin, attending National Honors Society team meetings and organizing community events.
+As I head into my final year of high school, I'm excited to explore potential college majors like computer science/ engineering and continue growing as a leader and learner.</p>
     </section>
 
     <!-- Projects Section -->
